<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".view.fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_in_sign_up_fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        app:defaultNavHost="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/login_logout_nav">
        <!--        app -name-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:fontFamily="@font/roboto_slab"
                android:src="@drawable/funny_face"
                android:lineHeight="32sp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--status-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/signInStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="0dp"
            android:gravity="left"
            android:orientation="vertical"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ll_app_name">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_status"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="40dp"
            android:background="@drawable/edit_text_frame"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/signInStatus"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_email"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:src="@drawable/sms"
            android:layout_marginStart="10dp"

            app:layout_constraintStart_toStartOf="@id/edt_user_name"

            app:layout_constraintTop_toTopOf="@id/edt_user_name"
            app:layout_constraintBottom_toBottomOf="@id/edt_user_name"
            />
<!--        alert enter your email-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_name_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingHorizontal="4dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/enter_your_email"
            android:textColor="@color/red"
            android:paddingVertical="1dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/edt_user_name"
            app:layout_constraintStart_toStartOf="@id/edt_user_name"
            />
<!--        edit password-->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="40dp"
            android:background="@drawable/edit_text_frame"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name_alert"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_password"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:src="@drawable/lock"
            android:layout_marginStart="10dp"

            app:layout_constraintStart_toStartOf="@id/edt_password"

            app:layout_constraintTop_toTopOf="@id/edt_password"
            app:layout_constraintBottom_toBottomOf="@id/edt_password"
            />
<!--        icon show password-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/ic_show_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="-40dp"
            android:scaleType="fitXY"
            android:src="@drawable/eye_password_icon"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/edt_password"
            app:layout_constraintEnd_toEndOf="@id/edt_password"
            app:layout_constraintTop_toTopOf="@id/edt_password"
            />
<!-- alert enter your password-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_password_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingHorizontal="4dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/enter_your_password"
            android:textColor="@color/red"
            android:paddingVertical="1dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            app:layout_constraintStart_toStartOf="@id/edt_password"
            />
<!--        remember and forgot pass-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@id/remember_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_alert"
            >

<!--            remember check box-->
            <androidx.appcompat.widget.AppCompatCheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Remember me"
                android:textSize="14sp"
                android:textColor="@color/green"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/ask_reset_password"
                android:textSize="14sp"
                android:textColor="@color/green"
                android:textAllCaps="false"
                android:layout_weight="1"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
<!--button login-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@id/btn_login"
            android:layout_width="match_parent"
            android:height="44dp"
            android:layout_marginTop="20dp"
            android:text="Login"
            android:textAllCaps="false"
            android:background="@drawable/btn_login_shape"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remember_forgot_password" />
<!--thanh chan ngang-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@id/hr"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="25dp"
            android:gravity="left|center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
<!--left-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_weight="0.5"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toTopOf="@+id/hr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

<!--center-->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
<!--right-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_weight="0.5"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toTopOf="@+id/hr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

<!--text log in with-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/otherlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Log in with"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/hr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
<!--        logo gg with fb-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@id/ggWithFb"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:gravity="left|center"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/otherlogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Google -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/btn_logo_shape"
                android:layout_weight="0.5"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <!-- Logo -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/logo_ggle" />

                <!-- Text -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Google"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
<!--facebook login-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/btn_logo_shape"
                android:layout_weight="0.5"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <!-- Logo -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/logo_fb" />

                <!-- Text -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Facebook"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

<!--        dont have an account-->
        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ggWithFb">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_having_account"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@id/btn_nav_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="Sign up"
                android:textColor="@color/green"
                android:textAllCaps="false"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>