<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">
<!--    tools:context=".view.fragment.ResetPassWordFragment">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_in_sign_up_fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="137dp"
        android:layout_marginRight="16dp"
        app:defaultNavHost="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/login_logout_nav">
        <!--        app -name-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:fontFamily="@font/roboto_slab"
                android:src="@drawable/funny_face"
                android:lineHeight="32sp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--status-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/signInStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="0dp"
            android:gravity="left"
            android:orientation="vertical"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ll_app_name">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        edit password-->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="40dp"
            android:layout_marginHorizontal="12px"
            android:layout_marginVertical="20dp"
            android:paddingVertical="12px"
            android:background="@drawable/edit_text_frame"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/signInStatus"
            />
        <!--        icon password-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_password"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:src="@drawable/lock"
            android:layout_marginStart="10dp"

            app:layout_constraintStart_toStartOf="@id/edt_password"

            app:layout_constraintTop_toTopOf="@id/edt_password"
            app:layout_constraintBottom_toBottomOf="@id/edt_password"
            />
        <!--        icon show password-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/ic_show_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/eye_password_icon"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/edt_password"
            app:layout_constraintEnd_toEndOf="@+id/edt_password"

            app:layout_constraintTop_toTopOf="@id/edt_password" />
        <!-- alert enter your password-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_password_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingHorizontal="4dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/enter_your_password"
            android:textColor="@color/red"
            android:paddingVertical="1dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            app:layout_constraintStart_toStartOf="@id/edt_password"
            />
        <!--        re password-->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="1px"
            android:layout_marginHorizontal="12px"
            android:layout_marginVertical="20dp"

            android:background="@drawable/edit_text_frame"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_password_alert"
            />
        <!--        icon password-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/re_ic_password"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:src="@drawable/lock"
            android:layout_marginStart="10dp"

            app:layout_constraintStart_toStartOf="@id/re_password"

            app:layout_constraintTop_toTopOf="@id/re_password"
            app:layout_constraintBottom_toBottomOf="@id/re_password"
            />
        <!--        icon show password-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/ic_show_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="-40dp"
            android:scaleType="fitXY"
            android:src="@drawable/eye_password_icon"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/re_password"
            app:layout_constraintEnd_toEndOf="@id/re_password"
            app:layout_constraintTop_toTopOf="@id/re_password"
            />
        <!-- alert enter your password-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/re_tv_password_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingHorizontal="4dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/enter_your_password"
            android:textColor="@color/red"
            android:paddingVertical="1dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/re_password"
            app:layout_constraintStart_toStartOf="@id/re_password"
            />

        <!--button login-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginHorizontal="12px"
            android:layout_marginVertical="20dp"
            android:text="Log in"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/btn_login_shape"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_password">
        </androidx.appcompat.widget.AppCompatButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>